6_traefik/02-grafana-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: grafana
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-http
  namespace: grafana
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.mireu.xyz`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-https
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.mireu.xyz`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
  tls:
    secretName: cloudflare-origin-cert
